--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "ROIT",
-  "license": "ISC"
+  "author": "Karl Harder",
+  "license": "ISC",
+  "devDependencies": {
+    "git-commit-msg-linter": "^2.4.2"
+  }
 }
