--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.0.5",
+    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "git-commit-msg-linter": "^2.4.2",
     "typescript": "^3.9.3"
   }
