--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
         "target": "ES2019",
         "esModuleInterop": true,
         "allowJs": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
