--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.0.5",
-    "@typescript-eslint/parser": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
     "eslint-plugin-import": "^2.20.1",
     "git-commit-msg-linter": "^2.4.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.6",
     "typescript": "^3.9.3"
   }
 }
