--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -74,7 +74,7 @@ rules:
   function-call-argument-newline: [error, consistent]
   function-paren-newline: [error, multiline-arguments]
   no-duplicate-imports: error
-  quotes: [error, single, { allowTemplateLiterals: true }]
+  quotes: [error, double, { allowTemplateLiterals: true }]
   block-spacing: error
   func-call-spacing: error
   key-spacing: error
@@ -100,7 +100,7 @@ rules:
   computed-property-spacing: error
   array-bracket-spacing: error
   array-bracket-newline: [error, consistent]
-  no-unused-vars: 'off'
+  no-unused-vars: 'warn'
   require-atomic-updates: 'off'
   no-case-declarations: 'off'
 
@@ -121,7 +121,7 @@ rules:
   "@typescript-eslint/restrict-plus-operands": error
   "@typescript-eslint/unified-signatures": error
   "@typescript-eslint/no-floating-promises": error
-  "@typescript-eslint/no-unused-v ars": [error, { argsIgnorePattern: ^_ }]
+  "@typescript-eslint/no-unused-vars": [error, { argsIgnorePattern: ^_ }]
   "@typescript-eslint/explicit-function-return-type": error
   "@typescript-eslint/no-misused-promises": 'off'
   "@typescript-eslint/no-use-before-define":
