--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "keywords": [],
   "author": "Karl Harder",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.2",
@@ -17,7 +19,18 @@
     "eslint-plugin-import": "^2.20.1",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
+  },
+  "jest": {
+    "roots": ["<rootDir>/src"],
+    "collectCoverageFrom": ["<rootDir>/src/**/*.ts"],
+    "coverageDirectory": "coverage",
+    "testEnvironment": "node",
+    "transform": {
+        ".+\\.ts$": "ts-jest"
+    }
   }
 }
