--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "module": "CommonJS",
         "target": "ES2019",
         "esModuleInterop": true,
-        "allowJs": true
+        "allowJs": true,
+        "noUnusedParameters": true,
+        "noUnusedLocals": false
     },
     "exclude": [
         "node_modules",
