--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -127,6 +127,7 @@ rules:
   "@typescript-eslint/no-use-before-define":
     [error, { functions: false, classes: false }]
   "@typescript-eslint/ban-types": 'off'
+  "@typescript-eslint/no-unsafe-member-access": 'off'
 
   import/order: 'off'
   import/no-named-as-default: 'off'
