--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -128,6 +128,7 @@ rules:
     [error, { functions: false, classes: false }]
   "@typescript-eslint/ban-types": 'off'
   "@typescript-eslint/no-unsafe-member-access": 'off'
+  "@typescript-eslint/no-unsafe-assignment": 'off'
 
   import/order: 'off'
   import/no-named-as-default: 'off'
