--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
+    "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
@@ -28,12 +29,19 @@
     "typescript": "^3.9.3"
   },
   "jest": {
-    "roots": ["<rootDir>/src"],
-    "collectCoverageFrom": ["<rootDir>/src/**/*.ts"],
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.ts"
+    ],
     "coverageDirectory": "coverage",
     "testEnvironment": "node",
     "transform": {
-        ".+\\.ts$": "ts-jest"
+      ".+\\.ts$": "ts-jest"
     }
+  },
+  "dependencies": {
+    "validator": "^13.0.0"
   }
 }
