--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Karl Harder",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@types/validator": "^13.0.0",
@@ -42,6 +43,7 @@
     }
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.0.0"
   }
 }
