--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Karl Harder",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^25.2.3",
+    "@types/mongodb": "^3.5.20",
     "@types/node": "^14.0.5",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
@@ -40,10 +42,12 @@
     "testEnvironment": "node",
     "transform": {
       ".+\\.ts$": "ts-jest"
-    }
+    },
+    "preset": "@shelf/jest-mongodb"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.5.8",
     "validator": "^13.0.0"
   }
 }
