--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/mongodb": "^3.5.20",
     "@types/node": "^14.0.5",
@@ -28,6 +30,7 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
+    "sucrase": "^3.15.0",
     "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
   },
@@ -47,6 +50,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.5.8",
     "validator": "^13.0.0"
   }
