feat: ensure SignUp route returns an account on success

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "fast-glob": "^3.2.2",
     "mongodb": "^3.5.8",
     "validator": "^13.0.0"
   }
