chore: add new coverage to jest config file

--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
       "<rootDir>/src"
     ],
     "collectCoverageFrom": [
-      "<rootDir>/src/**/*.ts"
+      "<rootDir>/src/**/*.ts",
+      "!<rootDir>/src/main/**",
+      "!<rootDir>/src/**/**protocols.ts",
+      "!<rootDir>/src/**/index.ts"
     ],
     "coverageDirectory": "coverage",
     "testEnvironment": "node",
