--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.20",
     "@types/node": "^14.0.5",
     "@types/supertest": "^2.0.9",
@@ -57,6 +58,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.8",
     "validator": "^13.0.0"
   }
