--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,7 +2,7 @@
 env: { es6: true, node: true, jest: true }
 parser: "@typescript-eslint/parser"
 parserOptions:
-  project: tsconfig.json
+  project: tsconfig.eslint.json
   sourceType: module
 plugins:
   - "@typescript-eslint"
