--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "target": "ES2019",
         "esModuleInterop": true,
         "noUnusedParameters": true,
-        "noUnusedLocals": false
+        "noUnusedLocals": false,
+        "sourceMap": true
     },
     "include": [
         "src"
