--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
             -"27017:27017"
     api:
         container_name: api-container
-        build: .
-        image: clean-node-api
+        image: node:12
+        working_dir: /usr/src/clean-node-api
         restart: always
-        command: npm start
+        command: bash -c "npm install --only=prod && npm start"
         volumes: 
             - ./dist:/usr/src/clean-node-api/dist
         ports: 
