--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "noUnusedParameters": true,
         "noUnusedLocals": false,
-        "sourceMap": true
+        "sourceMap": true,
+        "rootDir": "src"
     },
     "include": [
         "src"
