--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -59,7 +59,7 @@ rules:
   indent: [error, 4, { SwitchCase: 1, CallExpression: { arguments: first } }]
   max-len: [error, { code: 120 }]
   spaced-comment: error
-  capitalized-comments: [error, always, { ignoreInlineComments: true }]
+  capitalized-comments: 'off'
   no-unused-expressions: error
   no-trailing-spaces: error
   comma-style: [error, last]
