--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
       "<rootDir>/src/**/*.ts",
       "!<rootDir>/src/main/**",
       "!<rootDir>/src/**/**protocols.ts",
-      "!<rootDir>/src/**/index.ts"
+      "!<rootDir>/src/**/index.ts",
+      "!**/test/**"  
     ],
     "coverageDirectory": "coverage",
     "testEnvironment": "node",
