--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.26",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
@@ -51,7 +52,7 @@
       "!<rootDir>/src/main/**",
       "!<rootDir>/src/**/**protocols.ts",
       "!<rootDir>/src/**/index.ts",
-      "!**/test/**"  
+      "!**/test/**"
     ],
     "coverageDirectory": "coverage",
     "testEnvironment": "node",
@@ -66,6 +67,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "nodemon": "^2.0.4",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.1"
   },
   "engines": {
