--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@shelf/jest-mongodb": "^1.2.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
@@ -68,8 +69,10 @@
     "preset": "@shelf/jest-mongodb"
   },
   "dependencies": {
+    "apollo-server-express": "^2.21.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongo-round": "^1.0.0",
     "mongodb": "^3.5.9",
