--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
@@ -73,6 +74,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongo-round": "^1.0.0",
     "mongodb": "^3.5.9",
