--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "apollo-server-integration-testing": "^2.3.0",
     "eslint": "^7.5.0",
     "eslint-plugin-import": "^2.22.0",
     "git-commit-msg-linter": "^2.4.4",
